# ID3-Auto-Tagger-2

./: .gitignore  CMakeLists.txt  readme.md
backend/: CMakeLists.txt
backend/include/: Downloader.h  IMediaService.hpp  LocalTrack.h  LocalTrackService.h  Query.h  QueryObject.h  TrackInterface.h  Video.h  YouTube.h
backend/include/Discogs/: Artist.h  DiscogsAPI.h  Label.h  MasterRelease.h  Release.h  ReleaseTrack.h  SearchResult.h
backend/include/Interfaces/: IAlbum.h  IArtist.h  IAudioFileInformation.hpp  IFileImageProvider.h  IImageProvider.hpp  IMediaEntity.hpp  IPlaylist.h  IRemoteImageProvider.h  ISearchResult.hpp  ITrack.h  ITrackMutable.h  IVideo.h  MediaEntityBase.h
backend/include/Local/: LocalTrack.h  LocalTrackService.h
backend/include/Services/: DownloadService.h  IMediaService.hpp  MediaServiceRegistry.h  SearchService.h  TagService.h  TrackIdentificationService.h  TrackVerificationIndex.h
backend/include/Services/Sources/: DiscogsMediaSource.h  IMediaSource.hpp  SpotifyMediaSource.h  YoutubeMediaSource.h
backend/include/Sources/: IAlbumSource.hpp  IArtistSource.hpp  IMediaSource.hpp  IPlaylistSource.hpp  ITrackSource.hpp  IVideoSource.hpp  LocalTrackSource.h
backend/include/Sources/Discogs/: DiscogsArtistSource.h  DiscogsMasterReleaseSource.h  DiscogsReleaseSource.h  DiscogsTrackSource.h
backend/include/Sources/Spotify/: SpotifyAlbumSource.h  SpotifyArtistSource.h  SpotifyPlaylistSource.h  SpotifyTrackSource.h
backend/include/Sources/YouTube/: YouTubeVideoSource.h
backend/include/Spotify/: Album.h  Artist.h  Playlist.h  SpotifyAPI.h  SpotifyObject.h  Track.h  User.h
backend/include/TrackSource/: DiscogsTrackSource.h  ITrackSource.hpp  SpotifyTrackSource.h
backend/include/YouTube/: Video.h  YouTubeAPI.h
backend/src/: Downloader.cpp  LocalTrack.cpp  LocalTrackService.cpp  Query.cpp  QueryObject.cpp  TrackInterface.cpp  Video.cpp  YouTube.cpp  main.cpp
backend/src/Discogs/: Artist.cpp  DiscogsAPI.cpp  Label.cpp  MasterRelease.cpp  Release.cpp  ReleaseTrack.cpp  SearchResult.cpp
backend/src/Interfaces/: IAlbum.cpp  IArtist.cpp  IFileImageProvider.cpp  IPlaylist.cpp  IRemoteImageProvider.cpp  ITrack.cpp  IVideo.cpp  MediaEntityBase.cpp
backend/src/Local/: LocalTrack.cpp  LocalTrackService.cpp
backend/src/Services/: DownloadService.cpp  MediaServiceRegistry.cpp  SearchService.cpp  TagService.cpp  TrackIdentificationService.cpp  TrackVerificationIndex.cpp
backend/src/Services/Sources/: DiscogsMediaSource.cpp  SpotifyMediaSource.cpp  YoutubeMediaSource.cpp
backend/src/Sources/: LocalTrackSource.cpp
backend/src/Sources/Discogs/: DiscogsArtistSource.cpp  DiscogsMasterReleaseSource.cpp  DiscogsReleaseSource.cpp  DiscogsTrackSource.cpp
backend/src/Sources/Spotify/: SpotifyAlbumSource.cpp  SpotifyArtistSource.cpp  SpotifyPlaylistSource.cpp  SpotifyTrackSource.cpp
backend/src/Sources/YouTube/: YouTubeVideoSource.cpp
backend/src/Spotify/: Album.cpp  Artist.cpp  Playlist.cpp  SpotifyAPI.cpp  SpotifyObject.cpp  Track.cpp  User.cpp
backend/src/TrackSource/: DiscogsTrackSource.cpp  LocalTrackSource.cpp  SpotifyTrackSource.cpp
backend/src/YouTube/: Video.cpp  YouTubeAPI.cpp
frontend/: CMakeLists.txt
frontend/include/: AlbumDetailsPanel.h  AlbumLabel.h  App.h  ArtistLabel.h  CircleProgressBar.h  DiscogsWindow.h  DownloadStatusRenderer.h  IconProvider.h  LabeledTextCtrl.h  LocalTrackWindow.h  MainFrame.h  MediaDetailsPanel.hpp  MediaLabel.h  MediaWindow.hpp  MultiInputDialog.h  PlaylistLabel.h  ScrollText.h  SettingsWindow.h  SpotifyWindow.h  TrackEditWindow.h  TrackLabel.h  TrackModel.h  TrackModelRow.h  TrackPanel.h  TrackWindow.h  VideoLabel.h  YouTubeWindow.h
frontend/include/Components/: LabeledTextCtrl.h  MediaLabel.h  ScrollText.h
frontend/include/Core/: IconProvider.h  MainFrame.h
frontend/include/Dialogs/: TrackSelectionDialog.h  VideoSelectionDialog.h
frontend/include/Media/Album/: AlbumDetailsPanel.h
frontend/include/Media/Track/: ComparisonTrackPanel.h  LocalTrackPanel.h  TrackModel.h  TrackModelRow.h  TrackPanel.h
frontend/include/Media/Video/: VideoModel.h  VideoModelRow.h  VideoPanel.h
frontend/include/Windows/: DiscogsWindow.h  LocalTrackWindow.h  MediaWindow.hpp  SettingsWindow.h  SpotifyWindow.h  TrackEditWindow.h  YouTubeWindow.h
frontend/src/: AlbumDetailsPanel.cpp  AlbumLabel.cpp  App.cpp  ArtistLabel.cpp  CircleProgressBar.cpp  DiscogsWindow.cpp  DownloadStatusRenderer.cpp  IconProvider.cpp  LabeledTextCtrl.cpp  LocalTrackWindow.cpp  MainFrame.cpp  MediaLabel.cpp  MultiInputDialog.cpp  PlaylistLabel.cpp  ScrollText.cpp  SettingsWindow.cpp  SpotifyWindow.cpp  TrackEditWindow.cpp  TrackLabel.cpp  TrackModel.cpp  TrackModelRow.cpp  TrackPanel.cpp  TrackWindow.cpp  VideoLabel.cpp  YouTubeWindow.cpp  main.cpp
frontend/src/Components/: CircleProgressBar.cpp  LabeledTextCtrl.cpp  MediaLabel.cpp  ScrollText.cpp
frontend/src/Core/: App.cpp  IconProvider.cpp  MainFrame.cpp
frontend/src/Dialogs/: MultiInputDialog.cpp  TrackSelectionDialog.cpp  VideoSelectionDialog.cpp
frontend/src/Media/Album/: AlbumDetailsPanel.cpp
frontend/src/Media/Track/: ComparisonTrackPanel.cpp  LocalTrackPanel.cpp  TrackModel.cpp  TrackModelRow.cpp  TrackPanel.cpp
frontend/src/Media/Track/Renderers/: DownloadStatusRenderer.cpp
frontend/src/Media/Video/: VideoModel.cpp  VideoModelRow.cpp  VideoPanel.cpp
frontend/src/Windows/: DiscogsWindow.cpp  LocalTrackWindow.cpp  SettingsWindow.cpp  SpotifyWindow.cpp  TrackEditWindow.cpp  YouTubeWindow.cpp
